<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/name_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:textAlignment="center"
    style="@style/NameStyle"/>

  <EditText
    android:id="@+id/nickname_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/editText_placeholder"
    android:inputType="textPersonName"
    style="@style/NameStyle"
    android:text=""
    android:textAlignment="center"/>

  <Button
    android:id="@+id/done_button"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/small_padding"
    android:fontFamily="@font/roboto"
    android:text="@string/done_button_label"/>

  <TextView
    android:id="@+id/nickname_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/NameStyle"
    android:textAlignment="center"
    android:visibility="gone"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/small_padding"
    android:text=""/>

  <ImageView
    android:id="@+id/star_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/small_padding"
    android:contentDescription="@string/yellow_star"
    app:srcCompat="@android:drawable/btn_star_big_on"/>

  <ScrollView
    android:id="@+id/bio_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/scrollable_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scrollable_img"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        android:paddingTop="@dimen/layout_margin"/>

      <TextView
        android:id="@+id/bio_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:lineSpacingMultiplier="1.2"
        style="@style/NameStyle"/>

    </LinearLayout>
  </ScrollView>
</LinearLayout>